# slint-template

./: .gitignore  Cargo.toml  cargo-generate.toml
logging/: debug.yml  release.yml
src/: main.rs
src/dialogs/: mod.rs
src/installer/: mod.rs
src/logging/: mod.rs
src/requests/: mod.rs
src/workers/: mod.rs
ui/: about-popup.slint  app-view.slint  app-window.slint  globals.slint  main-view.slint  main.slint
